@@ -7,6 +7,8 @@ nova (2011.3~d1-0ubuntu2) UNRELEASED; urgency=low
   * Add parted to sudoers file.
   * Add Depends: python-simplejson and Conflicts: python-cjson due to
     bug #800465 which caused the test suite to fail.
+  * Remove nova-instancemonitor package (dropped upstream).
+  * Remove twisted dependency (dropped upstream).
 
   [ Thierry Carrez (ttx) ]
   * Added python-xattr to build deps, apprently this is now needed
